Refactor general para manejar pushers y cleaners